<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/styleTextView"
                android:text="@string/fio" />
            <EditText
                style="@style/styleEditText"
                android:id="@+id/fio_input_text"
                android:hint="@string/fio_input"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/styleTextView"
                android:text="@string/age" />
            <EditText
                style="@style/styleEditText"
                android:id="@+id/user_age_input_text"
                android:hint="@string/age_input"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">
            <TextView
                style="@style/styleTextView"
                android:text="@string/salary" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <SeekBar
                    android:id="@+id/salary_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:min="1000"
                    android:max="5000" />
                <TextView
                    style="@style/styleTextView"
                    android:id="@+id/salary_text_view"
                    android:layout_width="match_parent"
                    android:text="1000"
                    android:gravity="center" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/styleAnswerLinearLayout">
            <TextView
                style="@style/styleTextView"
                android:layout_width="match_parent"
                android:text="@string/answer_1"
                android:gravity="center" />

            <RadioGroup
                style="@style/styleRadioGroup"
                android:id="@+id/answer1_radio_group">
                <RadioButton
                    style="@style/styleRadioButton"
                    android:id="@+id/radio_1option_1"
                    android:text="6"
                    android:tag="false" />

                <RadioButton
                    style="@style/styleRadioButton"
                    android:id="@+id/radio_1_option_2"
                    android:text="7"
                    android:tag="false" />

                <RadioButton
                    style="@style/styleRadioButton"
                    android:id="@+id/radio_1_option_3"
                    android:text="8"
                    android:tag="true" />

                <RadioButton
                    style="@style/styleRadioButton"
                    android:id="@+id/radio_1_option_4"
                    android:text="9"
                    android:tag="false" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            style="@style/styleAnswerLinearLayout">
            <TextView
                style="@style/styleTextView"
                android:layout_width="match_parent"
                android:text="@string/answer_2"
                android:gravity="center" />

            <RadioGroup
                style="@style/styleRadioGroup"
                android:id="@+id/answer2_radio_group">
                <RadioButton
                    style="@style/styleRadioButton"
                    android:id="@+id/radio_2_option_1"
                    android:text="=="
                    android:tag="true" />

                <RadioButton
                    style="@style/styleRadioButton"
                    android:id="@+id/radio_2_option_2"
                    android:text="="
                    android:tag="false" />

                <RadioButton
                    style="@style/styleRadioButton"
                    android:id="@+id/radio_2_option_3"
                    android:text="!="
                    android:tag="false" />

                <RadioButton
                    style="@style/styleRadioButton"
                    android:id="@+id/radio_2_option_4"
                    android:text="==="
                    android:tag="false" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            style="@style/styleAnswerLinearLayout">
            <TextView
                style="@style/styleTextView"
                android:layout_width="match_parent"
                android:text="@string/answer_3"
                android:gravity="center" />

            <RadioGroup
                style="@style/styleRadioGroup"
                android:id="@+id/answer3_radio_group">
                <RadioButton
                    style="@style/styleRadioButton"
                    android:id="@+id/radio_3_option_1"
                    android:text="float"
                    android:tag="false" />

                <RadioButton
                    style="@style/styleRadioButton"
                    android:id="@+id/radio_3_option_2"
                    android:text="string"
                    android:tag="false" />

                <RadioButton
                    style="@style/styleRadioButton"
                    android:id="@+id/radio_3_option_3"
                    android:text="int"
                    android:tag="true" />

                <RadioButton
                    style="@style/styleRadioButton"
                    android:id="@+id/radio_3_option_4"
                    android:text="bool"
                    android:tag="false" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            style="@style/styleAnswerLinearLayout">
            <TextView
                style="@style/styleTextView"
                android:layout_width="match_parent"
                android:text="@string/answer_4"
                android:gravity="center" />

            <RadioGroup
                style="@style/styleRadioGroup"
                android:id="@+id/answer4_radio_group">
                <RadioButton
                    style="@style/styleRadioButton"
                    android:id="@+id/radio_4_option_1"
                    android:text="set"
                    android:tag="false" />

                <RadioButton
                    style="@style/styleRadioButton"
                    android:id="@+id/radio_4_option_2"
                    android:text="int"
                    android:tag="false" />

                <RadioButton
                    style="@style/styleRadioButton"
                    android:id="@+id/radio_4_option_3"
                    android:text="myVar"
                    android:tag="false" />

                <RadioButton
                    style="@style/styleRadioButton"
                    android:id="@+id/radio_4_option_4"
                    android:text="let"
                    android:tag="true" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TextView
                style="@style/styleTextView"
                android:text="@string/choice" />
            <CheckBox
                style="@style/styleCheckBox"
                android:id="@+id/experience_checkbox"
                android:text="@string/experience" />
            <CheckBox
                style="@style/styleCheckBox"
                android:id="@+id/command_work_checkbox"
                android:text="@string/command_work" />
            <CheckBox
                style="@style/styleCheckBox"
                android:id="@+id/trip_checkbox"
                android:text="@string/trip" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_test"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center" />

        <TextView
            style="@style/styleTextView"
            android:id="@+id/result_text_view"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="ТЕСТ ПРОЙДЕН"
            android:layout_marginBottom="15dp"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>